# rust-rest-api-template-mysql

./: .gitignore  Cargo.toml  README.md
migrations/: 20231004121904_todos.sql
src/: main.rs
src/api/: todo.rs
src/model/: todo.rs
src/repository/: mysql.rs
src/utility/: configuration.rs  error.rs  logger.rs  middleware.rs  mod.rs  response.rs  setup.rs
tests/: rust-rest-api-template-mysql.postman_collection.json
