[package]
name = "rest-api-template"
version = "0.1.0"
edition = "2021"

[dependencies]

log = "0.4.20"
log4rs = "1.2.0"
envy = "0.4.2"
actix-web = "4.4.0"
actix-cors = "0.6.4"
serde = { version = "1.0.188", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["mysql", "runtime-tokio", "tls-rustls"] }